fix header z-index

--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,6 +1,7 @@
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+  z-index: 2;
   transition: opacity 0.1s linear;
 }
 
