--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -6,4 +6,5 @@
   font-size: 18px;
   line-height: 25px;
   font-weight: 400;
+  z-index: 2;
 }
